# sql-exercises

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  QA_FINDINGS.md  README.md  pyproject.toml  requirements.txt
data/scripts/: generate_expected_results.py  init_database.py  schema.sql
notebooks/: 00_setup_and_introduction.ipynb  01_select_basics.ipynb  02_sorting_limiting.ipynb  03_aggregations.ipynb  04_joins_basics.ipynb  05_joins_advanced.ipynb  06_subqueries.ipynb  07_set_operations.ipynb  08_string_date_functions.ipynb  09_case_conditional.ipynb  10_ctes.ipynb  11_window_functions.ipynb  12_advanced_windows.ipynb  13_recursive_ctes.ipynb  14_optimization_reporting.ipynb
src/sql_exercises/: __init__.py  checker.py  connection.py
tests/: conftest.py
tests/expected_results/: 01_select_basics.json  02_sorting_limiting.json  03_aggregations.json  04_joins_basics.json  05_joins_advanced.json  06_subqueries.json  07_set_operations.json  08_string_date_functions.json  09_case_conditional.json  10_ctes.json  11_window_functions.json  12_advanced_windows.json  13_recursive_ctes.json  14_optimization_reporting.json
