[project]
name = "sql-exercises"
version = "1.0.0"
description = "Interactive SQL learning with Jupyter notebooks and automated testing"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=0.9.0",
    "jupyterlab>=4.0.0",
    "pandas>=2.0.0",
    "faker>=20.0.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D100", "D104"]  # Allow missing docstrings in public modules/packages

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "D"]
"tests/*" = ["D"]
"data/scripts/*" = ["D100", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"
